--- a/Views/Students/Create.cshtml
+++ b/Views/Students/Create.cshtml
@@ -1,13 +1,13 @@
 ﻿@model StudentViewModel
 @{
-    ViewData["Title"] = "Create student entity";
+    ViewData["Title"] = "Create new student";
 }
 <h1>@ViewData["Title"]</h1>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 formDiv">
       <form asp-action="Create">
         <fieldset>
-          <legend>Create student</legend>
+          <legend></legend>
           <div>
              <label for="id">Id:</label>
              <input type="number" name="id" value="" />
