--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">dotnetWebApp</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Students" asp-action="Index">dotnetWebApp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,13 +22,20 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Index">Student list</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="GetAll">Student list</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Create">Add student</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                              <form asp-action="Search"  class="nav-link text-dark">
+                                    <label for="keyword"></label>
+                                    <input type="text" name="keyword" placeholder="Search..." >
+                                    <button type="submit">Search</button>
+                              </form >
                         </li>
                     </ul>
                 </div>
@@ -43,7 +50,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - dotnetWebApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - dotnetWebApp - <a asp-area="" asp-controller="Students" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
