--- a/Views/Students/Details.cshtml
+++ b/Views/Students/Details.cshtml
@@ -62,6 +62,12 @@
      </div>
  }
 </div>
-<div>
-<a  asp-action="Index"> Back to student list</a>
+<div class="dispace">
+    <div >
+        <a asp-action="Index"> Back to student list</a>
+    </div>
+    <div >
+        <a asp-route-id="@Model.Id" asp-action="Delete">Delete</a>
+        | <a asp-route-id="@Model.Id" asp-action="Update">update</a>
+    </div>
 </div>
